# blob-store/api/server_types.gen.go
@@ -7,9 +7,35 @@ import (
 	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 )
 
+// Error Object with error type and description
+type Error struct {
+	Code    string `json:"code"`
+	Message string `json:"message"`
+}
+
+// XTraceID defines model for xTraceID.
+type XTraceID = openapi_types.UUID
+
+// ErrorBadRequest Object with error type and description
+type ErrorBadRequest = Error
+
+// ErrorInternal Object with error type and description
+type ErrorInternal = Error
+
+// UploadBlobResponse defines model for UploadBlobResponse.
+type UploadBlobResponse struct {
+	BlobId string `json:"blob_id"`
+}
+
 // UploadBlobMultipartBody defines parameters for UploadBlob.
 type UploadBlobMultipartBody struct {
 	File openapi_types.File `json:"file"`
+}
+
+// UploadBlobParams defines parameters for UploadBlob.
+type UploadBlobParams struct {
+	// XTraceID Globally unique identifier of the request in UUID v4 format
+	XTraceID XTraceID `json:"X-Trace-ID"`
 }
 
 // UploadBlobMultipartRequestBody defines body for UploadBlob for multipart/form-data ContentType.
